# gunicorn-json-logger

./: .editorconfig  .pre-commit-config.yaml  CHANGELOG.md  README.md  gunicorn.conf.py  pyproject.toml
.github/workflows/: build-and-release.yml  python-tests.yml
src/gunicorn_json_logger/: jsonlogger.py
tests/: __init__.py  test_logger.py
